--- a/Web_App_MVC_L2/Web_App_MVC_L2/Views/Shared/_Layout.cshtml
+++ b/Web_App_MVC_L2/Web_App_MVC_L2/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ToDo" asp-action="Index">ToDo List</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Quotes" asp-action="Index">Quotes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
