quotes v2 | add favicon image

--- a/Web_App_MVC_L2/Web_App_MVC_L2/Views/Quotes/Index.cshtml
+++ b/Web_App_MVC_L2/Web_App_MVC_L2/Views/Quotes/Index.cshtml
@@ -11,7 +11,18 @@
     <button id="addQuoteButton">Add Quote</button>
 
     <h3>Favorite Quotes</h3>
-    <ul id="quoteList"></ul>
+    <table class="table-fixed table-striped">
+        <thead>
+            <tr>
+                <th style="width: 40%;">Quote</th>
+                <th style="width: 30%;">Author</th>
+                <th style="width: 30%;">Actions</th>
+            </tr>
+        </thead>
+        <tbody id="quoteList">
+            <!-- PLACE FOR QUOTES -->
+        </tbody>
+    </table>
 </div>
 
 <script src="/js/quoteApp.js"></script>
